# persephone

./: Cargo.toml  Dockerfile  README
.cargo/: config.toml
.github/workflows/: docker-publish.yml  rust.yml
src/: assistant.rs  lib.rs  loading.rs  main.rs  prompt.rs  server.rs  speech.rs  token_output_stream.rs  utils.rs  voice.rs
tests/: assistant.rs
