[package]
name = "persephone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.89"
async-graphql = { version = "7.0.11", features = ["tracing"] }
async-graphql-axum = "7.0.11"
async-stream = "0.3.6"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["tracing"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.6.0" }
clap = { version = "4.5.19", features = ["derive"] }
futures-util = "0.3.31"
hf-hub = "0.3.2"
hound = "3.5.1"
ndarray = "0.16.1"
serde = "1.0.210"
serde_json = "1.0.128"
tokenizers = "0.20.0"
tokio = { version = "1.40.0", features = ["full", "tracing"] }

[features]
metal = ["candle-core/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate"]
