[package]
name = "persephone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
async-graphql = { version = "7.0.13", features = ["tracing"] }
async-graphql-axum = "7.0.13"
async-stream = "0.3.6"
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["tracing"] }
candle-core = { version = "0.8.1" }
candle-nn = { version = "0.8.1" }
candle-transformers = { version = "0.8.1" }
clap = { version = "4.5.23", features = ["derive"] }
futures-util = "0.3.31"
hf-hub = "0.3.2"
hound = "3.5.1"
ndarray = "0.16.1"
serde = "1.0.216"
serde_json = "1.0.134"
tokenizers = "0.21.0"
tokio = { version = "1.42.0", features = ["full", "tracing"] }

[features]
metal = ["candle-core/metal", "candle-transformers/metal"]
accelerate = ["candle-core/accelerate"]
