[package]
name = "persephone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.95", default-features = false }
async-graphql = { version = "7.0.13", default-features = false, features = ["graphiql"] }
async-graphql-axum = "7.0.13"
async-stream = "0.3.6"
async-trait = "0.1.83"
axum = { version = "0.7.9", default-features = false }
candle-core = { version = "0.8.1" }
candle-nn = { version = "0.8.1" }
candle-transformers = { version = "0.8.1" }
clap = { version = "4.5.23", features = ["derive"] }
futures-util = { version = "0.3.31", default-features = false }
hf-hub = "0.3.2"
hound = "3.5.1"
ndarray = { version = "0.16.1", default-features = false }
serde = { version = "1.0.216", default-features = false }
serde_json = "1.0.134"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }

[build]
rustflags = ["-Ctarget-feature=+fp16,+fhm"]